# bitmagnet-comparer

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: cd.yml  check.yml  docker.yml  nostd.yml  release-plz.yml  safety.yml  scheduled.yml  test.yml
src/: main.rs
